namespace Verwaltungssystem;

public enum Rolle
{
   
    Projektleiter,
    Mitarbeiter,
    
}